Closed
Bug 1130259
Opened 10 years ago
Closed 10 years ago
Integer overload of scrollBy recursively calls itself instead of calling the double overload
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla38
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(1 file)
984 bytes,
patch
|
kip
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Thanks to Chris Peterson for spotting this. We should fix this on 36, because otherwise binary extensions might run into this problem and crash.
Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8560250 -
Flags: review?(kgilbert)
Assignee | ||
Comment 2•10 years ago
|
||
Also, let me know if you prefer "r=kgilbert" to "r=kip", ok?
Comment 3•10 years ago
|
||
Comment on attachment 8560250 [details] [diff] [review]
Make sure the integer overload of ScrollBy calls the double one, not itself
Review of attachment 8560250 [details] [diff] [review]:
-----------------------------------------------------------------
This looks good, thanks for spotting it.
Also, "r=kip" might be easiest for people that are trying to find me on irc by that handle.
Attachment #8560250 -
Flags: review?(kgilbert) → review+
Comment 4•10 years ago
|
||
Tracking for 36+ based on comment 0. Given that there is already a patch, let's try to get this into Beta 8, which goes to build on Monday.
Assignee | ||
Comment 5•10 years ago
|
||
Assignee | ||
Comment 6•10 years ago
|
||
Comment on attachment 8560250 [details] [diff] [review]
Make sure the integer overload of ScrollBy calls the double one, not itself
Approval Request Comment
[Feature/regressing bug #]: Bug 1045754
[User impact if declined]: Some binary extensions may end up with stack-overflow
crashes if they try to scroll windows from c++.
[Describe test coverage new/current, TreeHerder]: None, sadly.
[Risks and why]: Risk is very very low.
[String/UUID change made/needed]: None.
Attachment #8560250 -
Flags: approval-mozilla-beta?
Attachment #8560250 -
Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Updated•10 years ago
|
Attachment #8560250 -
Flags: approval-mozilla-beta?
Attachment #8560250 -
Flags: approval-mozilla-beta+
Attachment #8560250 -
Flags: approval-mozilla-aurora?
Attachment #8560250 -
Flags: approval-mozilla-aurora+
Comment 8•10 years ago
|
||
Comment 9•10 years ago
|
||
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•