Bug 1130259.  Make sure the integer overload of ScrollBy calls the double one, not itself.  r=kip